--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--Hero section-->
     <section id="hero">
         <div class="hero container">
-            <div>
+            <div class="padding-hero">
                 <h1>Our <span></span></h1>
                 <h1>Restaurant <span></span></h1>
                 <a href="#" type="button" class="cta">Offerts</a>
