--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="padding-hero">
                 <h1>Our <span></span></h1>
                 <h1>Restaurant <span></span></h1>
-                <a href="#" type="button" class="cta">Offerts</a>
+                <a href="#" type="button" class="cta">Offers</a>
             </div>
         </div>
     </section>
@@ -76,7 +76,7 @@
     <section id="offerts">
         <div class="offerts container">
             <div class="offert">
-                <h1>our best offerts</h1>
+                <h1>our best offers</h1>
             </div>
             <div class="offert-item pizza">
                 <h1>Pizza</h1>
@@ -92,5 +92,57 @@
 
 
     <!--popular offerts-->
+
+
+    <!--about section-->
+
+    <section id="about">
+        <div class="about container">
+            <div class="col-left">
+                <div class="about-img">
+                    <img class="about-us-img" src="./img/about.jpeg" alt="unable to load the image, about us">
+                </div>
+            </div>
+            <div class="col-right">
+                <h1 class="section-title">About <span>us</span></h1>
+                <h2>best restaurant</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolores impedit quas, minima iure vel praesentium repellat molestiae cupiditate aliquid, id, numquam adipisci rem ab dolor nulla! Commodi eaque deleniti similique eius dolor error beatae optio voluptatem omnis eveniet nam laboriosam, iste numquam, deserunt, quas debitis veritatis provident praesentium cumque?</p>
+                <a class="cta" href="#">our restaurant</a>
+            </div>
+        </div>
+    </section>
+
+    <!--about section-->
+
+    <!--contact section-->
+
+    <section id="contact">
+        <div class="contact container">
+            <div>
+                <h1 class="section-title">Contact <span>Info</span></h1>
+            </div>
+                <div class="contact-items">
+                    <div class="contact-item">
+                        <div class="icon"><img src="https://img.icons8.com/clouds/100/000000/phone.png"/></div>
+                        <div class="contact-info"></div>
+                        <h1>Phone</h1>
+                        <h2>+48 ### ### ###</h2>
+                        <h2>+48 ### ### ###</h2>
+                    </div>
+                    <div class="contact-item">
+                        <div class="icon"><img src="https://img.icons8.com/clouds/100/000000/email--v2.png"/></div>
+                        <div class="contact-info"></div>
+                        <h1>Email</h1>
+                        <h2>Example@gmail.com</h2>
+                        <h2>NextExample@gmail.com</h2>
+                    </div>
+                </div>
+            </div>
+    </section>
+
+    <!--contact section-->
+
+
+
 </body>
 </html>
