--- a/index.html
+++ b/index.html
@@ -142,6 +142,30 @@
 
     <!--contact section-->
 
+    <!--footer-->
+
+
+
+    <section id="footer">
+        <div class="footer container">
+            <div class="brand"><h1>Restaurant</h1></div>
+            <h2>best food in city</h2>
+            <div class="social-icon">
+                <div class="social-item">
+                    <a href="#"><img src="https://img.icons8.com/bubbles/50/000000/facebook.png"/></a>
+                </div>
+                <div class="social-item">
+                    <a href="#"><<img src="https://img.icons8.com/bubbles/50/000000/twitter.png"/></a>
+                </div>
+                <div class="social-item">
+                    <a href="#"><<img src="https://img.icons8.com/bubbles/50/000000/youtube-squared.png"/></a>
+                </div>
+            </div>
+            <p>Copyright © 2021 Restaurant. All rights reserved</p>
+        </div>
+    </section>
+    <!--footer-->
+
 
 
 </body>
