--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 </div>
             </div>
             <div class="col-right">
-                <h1 class="section-title">About <span>us</span></h1>
+                <h1 class="section-title">About us</h1>
                 <h2>best restaurant</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolores impedit quas, minima iure vel praesentium repellat molestiae cupiditate aliquid, id, numquam adipisci rem ab dolor nulla! Commodi eaque deleniti similique eius dolor error beatae optio voluptatem omnis eveniet nam laboriosam, iste numquam, deserunt, quas debitis veritatis provident praesentium cumque?</p>
                 <a class="cta" href="#">our restaurant</a>
