--- a/index.html
+++ b/index.html
@@ -9,6 +9,28 @@
 </head>
 <body>
 
+    <!--Header section-->
+    <section id="header">
+        <div class="header container">
+            <div class="nav-bar">
+                <div class="brand">
+                    <a href="#hero"><h1>Restaurant</h1></a>
+                </div>
+                <div class="nav-list">
+                    <div class="hamburger"><div class="bar"></div></div>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="#menu">Menu</a></li>
+                        <li><a href="#offerts">offers</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--Header section-->
+
     <!--Hero section-->
     <section id="hero">
         <div class="hero container">
@@ -30,6 +52,13 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit mollitia, quasi quos eaque adipisci dolorum tempore, consequatur corrupti voluptatem veniam soluta. Illum voluptatem iusto molestiae vero quaerat, nesciunt nostrum, inventore expedita explicabo recusandae magni. Quis, corporis esse. Quod ab animi, temporibus eveniet nobis quae quibusdam ratione quaerat, sit beatae vero.</p>
             </div>
             <div class="menu-bottom">
+                <div class="menu-item">
+                    <div class="icon">
+                        <img src="https://img.icons8.com/dotty/80/000000/hamburger.png"/>
+                    </div>
+                    <h2>HAMBURGER</h2>
+                    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quos minima voluptatibus suscipit doloribus consectetur non ea. Sapiente veniam officia eos! Earum quae quasi accusantium fugiat soluta magni debitis pariatur.</P>
+                </div>
                 <div class="menu-item">
                     <div class="icon">
                         <img src="https://img.icons8.com/dotty/80/000000/hamburger.png"/>
@@ -123,14 +152,14 @@
             </div>
                 <div class="contact-items">
                     <div class="contact-item">
-                        <div class="icon"><img src="https://img.icons8.com/clouds/100/000000/phone.png"/></div>
+                        <div class="icon"><img class="sus2" src="https://img.icons8.com/clouds/100/000000/phone.png"/></div>
                         <div class="contact-info"></div>
                         <h1>Phone</h1>
                         <h2>+48 ### ### ###</h2>
                         <h2>+48 ### ### ###</h2>
                     </div>
                     <div class="contact-item">
-                        <div class="icon"><img src="https://img.icons8.com/clouds/100/000000/email--v2.png"/></div>
+                        <div class="icon"><img class="sus2" src="https://img.icons8.com/clouds/100/000000/email--v2.png"/></div>
                         <div class="contact-info"></div>
                         <h1>Email</h1>
                         <h2>Example@gmail.com</h2>
@@ -152,13 +181,13 @@
             <h2>best food in city</h2>
             <div class="social-icon">
                 <div class="social-item">
-                    <a href="#"><img src="https://img.icons8.com/bubbles/50/000000/facebook.png"/></a>
+                    <a href="#"><img class="sus" src="https://img.icons8.com/bubbles/50/000000/facebook.png"/></a>
                 </div>
                 <div class="social-item">
-                    <a href="#"><<img src="https://img.icons8.com/bubbles/50/000000/twitter.png"/></a>
+                    <a href="#"><<img class="sus" src="https://img.icons8.com/bubbles/50/000000/twitter.png"/></a>
                 </div>
                 <div class="social-item">
-                    <a href="#"><<img src="https://img.icons8.com/bubbles/50/000000/youtube-squared.png"/></a>
+                    <a href="#"><img class="sus" src="https://img.icons8.com/bubbles/50/000000/youtube-squared.png"/></a>
                 </div>
             </div>
             <p>Copyright © 2021 Restaurant. All rights reserved</p>
@@ -167,6 +196,6 @@
     <!--footer-->
 
 
-
+<script src="./app.js"></script>
 </body>
 </html>
